--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
-
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
